fixed vertical spacing on filter section

--- a/src/css/filter.scss
+++ b/src/css/filter.scss
@@ -2,23 +2,16 @@
   color: #999B9E;
   margin-top: 50px;
   margin-bottom: 40px;
-
-  &__results {
-    display: inline-block;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   &__selector {
-    float: right;
     display: flex;
     align-items: center;
   }
 
   &__gender {
-    display: inline-block;
     margin-right: 15px;
-  }
-
-  &__dropdown {
-    float: right;
   }
 }
