--- a/src/css/search.scss
+++ b/src/css/search.scss
@@ -19,7 +19,6 @@
   }
 
   &__btn {
-    float: right;
     background-color: #52A2FF;
     border: solid 1px #52A2FF;
     border-radius: 3px;
